# py-shyft

./: .gitignore  .gitmodules  .pre-commit-config.yaml  example.py  pyproject.toml
py_shyft/: client.py  logging_config.py
src/py_shyft/: __init__.py  client.py  logging_config.py
