[project]
name = "py-shyft"
description = "triton's geyser grpc client in python using shyft.to"
version = "1.0.1"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["grpcio", "protobuf", "uvloop", "orjson", "backoff"]

[dependency-groups]
dev = ["ipykernel", "ipywidgets", "plotly", "nbformat"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.protobuf]
dependencies = ["hatch-protobuf"]
proto_paths = ["yellowstone-grpc/yellowstone-grpc-proto/proto"]
output_path = "src/py_shyft/generated"

[tool.ruff]
target-version = "py313"
exclude = ["src/py_shyft/generated"]

[tool.ruff.lint]
# select = ["ALL"]
ignore = ["E501", "TID", "COM", "C90", "FBT"]
fixable = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
