[project]
name = "py-shyft"
description = "triton's geyser grpc client in python using shyft.to"
version = "1.0.1"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "backoff>=2.2.1",
    "grpcio>=1.71.0",
    "orjson>=3.10.16",
    "protobuf>=6.30.2",
    "uvloop>=0.21.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.6",
    "nbformat>=5.10.4",
    "plotly>=6.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.protobuf]
dependencies = ["hatch-protobuf"]
proto_paths = ["yellowstone-grpc/yellowstone-grpc-proto/proto"]
output_path = "src/py_shyft/generated"

[tool.ruff]
target-version = "py313"
exclude = ["src/py_shyft/generated"]

[tool.ruff.lint]
# select = ["ALL"]
ignore = ["E501", "TID", "COM", "C90", "FBT"]
fixable = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
